@@ -23,7 +23,6 @@ import org.apache.kafka.streams.kstream.internals.suppress.StrictBufferConfigImp
 import org.apache.kafka.streams.kstream.internals.suppress.SuppressedInternal;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.Map;
 
 @InterfaceAudience.Public
@@ -51,7 +50,7 @@ public interface Suppressed<K> extends NamedOperation<Suppressed<K>> {
          * Create a size-constrained buffer in terms of the maximum number of keys it will store.
          */
         static EagerBufferConfig maxRecords(final long recordLimit) {
-            return new EagerBufferConfigImpl(recordLimit, Long.MAX_VALUE, Collections.emptyMap());
+            return new EagerBufferConfigImpl(recordLimit, Long.MAX_VALUE, Map.of());
         }
 
         /**
@@ -63,7 +62,7 @@ public interface Suppressed<K> extends NamedOperation<Suppressed<K>> {
          * Create a size-constrained buffer in terms of the maximum number of bytes it will use.
          */
         static EagerBufferConfig maxBytes(final long byteLimit) {
-            return new EagerBufferConfigImpl(Long.MAX_VALUE, byteLimit, Collections.emptyMap());
+            return new EagerBufferConfigImpl(Long.MAX_VALUE, byteLimit, Map.of());
         }
 
         /**
